--- a/solr.html
+++ b/solr.html
@@ -114,6 +114,15 @@
 
                     </div>
 
+                    <div class="search-right-panel">
+                        <div class="search-facets" data-bind="foreach: facetDateList">
+                            <h2 data-bind="text: title"></h2>
+                            <ul data-bind="foreach: valueList">
+                                <a data-bind="click: $root.selectFacet"><li data-bind="text: display"></li></a>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
