Rectified Site contextual search bug

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             $(function(){
 
                 fbSearch = new FunnelbackSearch($, ko, {
-                    searchCollection: "Ava_Local",
-                    baseUrl: "http://localhost:8080",
+                    searchCollection: "PsdWeb",
+                    baseUrl: "http://127.0.0.1:81",
                     //searchUrl: "http://localhost:8080/s/search.json",
                     //suggestUrl : "http://localhost:8080/s/suggest.json",
                     //searchCollection: "xtremax-nea-site",
